Fix jumping to slide and refactor

--- a/extensions/blocks/story/player.scss
+++ b/extensions/blocks/story/player.scss
@@ -1,15 +1,6 @@
 @import '../../shared/styles/gutenberg-base-styles.scss';
 @import '../../shared/styles/jetpack-variables.scss';
 
-@keyframes progress-bar {
-	0% {
-		width: 0;
-	}
-	100% {
-		width: 100%;
-	}
-}
-
 .wp-story-container {
 	overflow: hidden;
 	opacity: 0;
@@ -108,15 +99,10 @@
 		background-image: url( "data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%3E%3Cpath%20d='M18%204.12L10.12%2012%2018%2019.88%2015.88%2022l-10-10%2010-10z'%20fill='white'/%3E%3Cpath%20fill='none'%20d='M0 0h24v24H0z'/%3E%3C/svg%3E" );
 	}
 
-	.wp-story-overlay-play {
+	.wp-story-overlay {
 		width: 100%;
 		height: 100%;
 		position: absolute;
-
-		.wp-story-button-play {
-			//background-image: url( "data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%3E%3Cpath%20d='M6%2019h4V5H6v14zm8-14v14h4V5h-4z'%20fill='white'/%3E%3Cpath%20d='M0%200h24v24H0z'%20fill='none'/%3E%3C/svg%3E" );
-			z-index: 1;
-		}
 	}
 
 	.wp-story-pagination {
@@ -158,16 +144,7 @@
 				opacity: 1;
 				height: 3px;
 				background-color: #fff;
-			}
-		}
-
-		.wp-story-pagination-bullet[selected],
-		.wp-story-pagination-bullet-active {
-			background-color: transparent;
-
-			.wp-story-pagination-bullet-bar-progress {
-				animation: progress-bar 5s linear;
-				animation-fill-mode: both;
+				transition: width 50ms;
 			}
 		}
 	}
